Shard CommandStores by contiguous ranges
patch by Benedict; reviewed by Aleksey Yeschenko for CASSANDR-18142